#339 Fix date input being cut off on market creation form

--- a/app/css/augur.css
+++ b/app/css/augur.css
@@ -1159,7 +1159,7 @@ a.market-pane:hover {
     margin: 0px 0px 0px 0px;
 }
 #add-market-modal .date input {
-  width: 130px;
+  width: 140px;
   margin: 20px auto;
   display: block;
   text-align: center;
